--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,24 @@
   "author": "italogsfernandes",
   "license": "MIT",
   "icons": {
-    "48": "icons/thanos-48.png"
+    "48": "icons/thanos-48.png",
+    "96": "icons/thanos-96.png",
+    "128": "icons/thanos-128.png"
   },
 
   "content_scripts": [
     {
-      "matches": ["*://*/*"],
+      "matches": ["*://*.mozilla.org/*"],
       "js": ["thanos.js"]
     }
+  ],
+  
+  "permissions": [
+    "contextMenus",
+    "storage",
+    "tabs",
+    "history",
+    "identity",
+    "notifications"
   ]
-
 }
