--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,22 @@
   "author": "italogsfernandes",
   "icons": {
     "48": "icons/thanos-48.png",
-    "96": "icons/thanos-96.png",
     "128": "icons/thanos-128.png"
   },
 
-  "content_scripts": [
-    {
-      "matches": ["*://*.mozilla.org/*"],
-      "js": ["thanos.js"]
-    }
-  ]
+  
+  "permissions": [
+    "bookmarks",
+    "tabs"
+  ],
+
+  "browser_action": {
+    "default_icon": "icons/thanos-48.png",
+    "default_title": "Snap!"
+  },
+
+  "background": {
+    "scripts": ["background.js"]
+  }
+
 }
