--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,11 @@
     "default_icon": "icons/thanos-48.png",
     "default_title": "Snap!"
   },
+  "browser_action": {
+    "default_icon": "icons/dust-48.png",
+    "default_title": "Memorial",
+    "default_popup": "memorial/memorial.html"
+  },
 
   "background": {
     "scripts": ["thanos.js"]
